[package]
name = "libsecp256k1"
description = "Pure Rust secp256k1 implementation."
license = "Apache-2.0"
version = "0.7.1"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/paritytech/libsecp256k1"
keywords = ["crypto", "ECDSA", "secp256k1", "bitcoin", "no_std"]
edition = "2018"
resolver = "2" # When resolver = "2" is specified in Cargo.toml, a different feature resolver is used which uses a different algorithm for unifying features.
              # details to check: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2

[dependencies]
libsecp256k1-core = { version = "0.3.0", path = "core", default-features = false } # default-features = false # do not include the default features of the dependency crate, and optionally
                         # cherry-pick individual features
arrayref = "0.3"
rand = { version = "0.8", default-features = false }
digest = "0.9"
base64 = { version = "0.13", default-features = false }
hmac-drbg = { version = "0.3", optional = true } # optional=true makes the dependency optional. to be selected based on feature specified.
                                                  # in this case, the feature hmac will enable hmac-drbg
sha2 = { version = "0.9", optional = true, default-features = false }
typenum = { version = "1.12", optional = true }
serde = { version = "1.0.104", features = ["derive"], default-features = false }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
secp256k1-test = { package = "secp256k1", version = "0.20.3", features = ["rand-std", "recovery"] }
clear_on_drop = "0.2"
serde_json = "1.0"
hex = "0.4"
hex-literal = "0.3.3"
bincode = "1.3.3"

[build-dependencies]
libsecp256k1-gen-ecmult = { version = "0.3.0", path = "gen/ecmult" }
libsecp256k1-gen-genmult = { version = "0.3.0", path = "gen/genmult" }

[features]
default = ["std", "hmac", "static-context"]
std = ["libsecp256k1-core/std", "sha2/std", "rand/std", "serde/std", "base64/std"]
hmac = ["hmac-drbg", "sha2", "typenum"]
static-context = []
lazy-static-context = ["static-context", "lazy_static", "std"]

[workspace]
members = [
  "./gen/ecmult",
  "./gen/genmult",
]
